force-app/main/incentive-program/objects/Completed_Incentive_Task__c/Completed_Incentive_Task__c.object-meta.xml
<CustomObject>
    <label>Completed Incentive Task</label>
    <nameField>
        <displayFormat>CITASK-{0000000}</displayFormat>
        <label>Completed Incentive Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Incentive Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>