force-app/main/incentive-program/objects/Completed_Incentive_Task__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Completed Incentive Tasks</relationshipLabel>
    <relationshipName>Completed_Incentive_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>