force-app/main/incentive-program/objects/Completed_Incentive_Task__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>