force-app/main/incentive-program/objects/Completed_Incentive_Task__c/fields/Completed_For__c.field-meta.xml
<CustomField>
    <fullName>Completed_For__c</fullName>
    <label>Completed For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>