force-app/main/incentive-program/objects/Completed_Incentive_Task__c/fields/Incentive_Plan_Task__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Plan_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Plan Task</label>
    <referenceTo>Incentive_Plan_Task__c</referenceTo>
    <relationshipLabel>Completed Incentive Tasks</relationshipLabel>
    <relationshipName>Completed_Incentive_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>