force-app/main/incentive-program/objects/Completed_Incentive_Task__c/fields/Incentive_Task_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Task_Catalog__c</fullName>
    <label>Incentive Task Catalog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>